Mention URL format when using custom port
darcs-hash:20070831154233-2ed11-62dac904495a46be460671ed8ba34dc70deafd0f.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -10,8 +10,9 @@ address = 0.0.0.0
 port = 8000
 ; TLS enabling
 tls = No
-; The XCAP Root URI
-root = http://xcap.example.com
+; The XCAP Root URI; must not contain any port number and 
+; must always start with http:// even if https:// is used to access the server
+root = http://xcap.example.com/
 ; The backend to be used for storage and authentication. Current supported
 ; values are Database and OpenSER.
 backend = Database
