--- a/config.ini.sample
+++ b/config.ini.sample
@@ -46,6 +46,9 @@ private_key = server.key
 authentication_db_uri = mysql://username:password@db-host/openser
 ; The database connection URI for the database that stores the XCAP documents
 storage_db_uri = mysql://username:password@db-host/openser
+; Authentication and storage tables
+subscriber_table = subscriber
+xcap_table = xcap_xml
 
 [OpenSER]
 
@@ -55,5 +58,8 @@ storage_db_uri = mysql://username:password@db-host/openser
 authentication_db_uri = mysql://username:password@db-host/openser
 ; The database connection URI for the database that stores the XCAP documents
 storage_db_uri = mysql://username:password@db-host/openser
+; Authentication and storage tables
+subscriber_table = subscriber
+xcap_table = xcap_xml
 ; The address and port where the XMLRPC Management Interface of OpenSER is listening
 xmlrpc_url = http://localhost:8080
