Update TLS cert path
darcs-hash:20070901114004-58252-fb724ea8257bb66bca40b76ac2eb001f3027581c.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -34,9 +34,9 @@ trusted_peers =
 [TLS]
 
 ; Server X509 certificate
-certificate = server.crt
+certificate = /etc/openxcap/tls/server.crt
 ; Server X509 private key
-private_key = server.key
+private_key = /etc/openxcap/tls/server.key
 
 [Database]
 
