--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: openxcap
 Section: net
 Priority: optional
 Maintainer: Mircea Amarascu <mircea@ag-projects.com>
-Build-Depends: cdbs (>= 0.4.47), debhelper (>= 5.0.42), python-all-dev (>= 2.4.4), python-central (>= 0.5.6), libssl-dev (>= 0.9.8)
-XS-Python-Version: >= 2.4
+Uploaders: Dan Pascu <dan@ag-projects.com>
+Build-Depends: cdbs (>= 0.4.47), debhelper (>= 5.0.42), python-all-dev (>= 2.4.4), python-central (>= 0.5.6)
+XS-Python-Version: all
 Standards-Version: 3.7.2
 
 Package: openxcap
-Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, libxml2, libgnutls13, python-lxml, python-zopeinterface, python-twisted-core, python-twisted-web2, python-application, python-gnutls
-Provides: ${python:Provides}
+Architecture: all
+Depends: ${python:Depends}, python-lxml, python-zopeinterface, python-twisted-core, python-twisted-web2, python-application, python-gnutls
 XB-Python-Version: ${python:Versions}
 Description: OpenXCAP server
  XCAP protocol allows a client to read, write, and modify application
