Fixed install rule
darcs-hash:20070903092756-b22ec-71d27d74bb3d7ab860febfdd87bb1dbfd5275657.gz

--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,6 @@ include /usr/share/cdbs/1/class/python-distutils.mk
 clean::
 	-rm -rf build dist MANIFEST
 
-install::
+install/openxcap::
 	install -m 0644 config.ini.sample debian/openxcap/etc/openxcap/config.ini
-	dh_movefiles -popenxcap
 
