Added tls directory
darcs-hash:20070903093345-b22ec-86ff243a89668a60a4c90dfc7b46e99d1374ddb5.gz

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 recursive-include scripts mysql-create.sql
+recursive-include tls     .placeholder
 recursive-include xcap/xml-schemas *.xsd
 include INSTALL LICENSE MANIFEST.in TODO config.ini.sample
