Use relative paths for tls certificates to work locally as well
darcs-hash:20070903093942-b22ec-e1512f219a2c6edea5503c050b48ef7741d5ef3f.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -34,9 +34,9 @@ trusted_peers =
 [TLS]
 
 ; Server X509 certificate
-certificate = /etc/openxcap/tls/server.crt
+certificate = tls/server.crt
 ; Server X509 private key
-private_key = /etc/openxcap/tls/server.key
+private_key = tls/server.key
 
 [Database]
 
