Added configuration option to disable XML schema validation.
darcs-hash:20070912092224-eaf6b-54e497d953968789174979bb4891bcf72e94bc61.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -16,6 +16,8 @@ root = http://xcap.example.com/
 ; The backend to be used for storage and authentication. Current supported
 ; values are Database and OpenSER.
 backend = Database
+; Validate XCAP documents against XML schemas, default is Yes
+document_validation = No
 
 [Authentication]
 
