document_validation defaults to Yes in config.ini.sample
darcs-hash:20070919072943-d7c9f-8e3123481a5854c91800199f1627e0f2aeab1d89.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -17,7 +17,7 @@ root = http://xcap.example.com/
 ; values are Database and OpenSER.
 backend = Database
 ; Validate XCAP documents against XML schemas, default is Yes
-document_validation = No
+document_validation = Yes
 
 [Authentication]
 
