Added description to [TLS] config section.
darcs-hash:20070919073003-d7c9f-bf71dbd69ee002dadd9fe5a70d3fca6ee95d9e93.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -35,6 +35,8 @@ trusted_peers =
 
 [TLS]
 
+; Location of X509 certificate and private key that identify this server. The path is
+; relative to /etc/openxcap, or it can be given as an absolute path.
 ; Server X509 certificate
 certificate = tls/server.crt
 ; Server X509 private key
