Include debian directory in the source archive.
darcs-hash:20071010140718-d7c9f-a210cb5eb40d00953cc84914a83f67830ac6137c.gz

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,8 @@
+recursive-include debian  changelog compat control copyright pycompat rules
+recursive-include debian  openxcap.dirs openxcap.init openxcap.postrm
 recursive-include scripts mysql-create.sql
 recursive-include tls     .placeholder
 recursive-include xcap/xml-schemas *.xsd
+prune debian/tmp
+prune debian/openxcap-*
 include INSTALL LICENSE MANIFEST.in TODO config.ini.sample
