Default xcap_table to "xcap" in config.ini.sample
darcs-hash:20071212080428-d7c9f-b25252027e1687a6df8b107eb76ba80f7b22b6a4.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -50,7 +50,7 @@ authentication_db_uri = mysql://username:password@db-host/openser
 storage_db_uri = mysql://username:password@db-host/openser
 ; Authentication and storage tables
 subscriber_table = subscriber
-xcap_table = xcap_xml
+xcap_table = xcap
 
 [OpenSER]
 
