--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: openxcap
 Section: net
 Priority: optional
 Maintainer: Mircea Amarascu <mircea@ag-projects.com>
-Uploaders: Dan Pascu <dan@ag-projects.com>
+Uploaders: Dan Pascu <dan@ag-projects.com>, Ruud Klaver <ruud@ag-projects.com>
 Build-Depends: cdbs (>= 0.4.47), debhelper (>= 5.0.42), python-all-dev (>= 2.4.4), python-central (>= 0.5.6)
 XS-Python-Version: all
 Standards-Version: 3.7.2
