Update default table name
darcs-hash:20080805104735-2ed11-479760bbd9acbdae1a15fddcd36dfef541452957.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -62,6 +62,6 @@ authentication_db_uri = mysql://username:password@db-host/openser
 storage_db_uri = mysql://username:password@db-host/openser
 ; Authentication and storage tables
 subscriber_table = subscriber
-xcap_table = xcap_xml
+xcap_table = xcap
 ; The address and port where the XMLRPC Management Interface of OpenSER is listening
 xmlrpc_url = http://localhost:8080
