Change default username
darcs-hash:20080825202744-58252-d4ec61f77b6b70e0427cf7ea4abecd0f07c0b482.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -72,10 +72,10 @@ xcap_table = xcap
 ; Configuration settings for OpenSER backend, active if this backend was selected
 ; in the [Server] section
 ; The database connection URI for the datase with subscriber accounts
-authentication_db_uri = mysql://username:password@db/opensips
+authentication_db_uri = mysql://opensips:password@db/opensips
 
 ; The database connection URI for the database that stores the XCAP documents
-storage_db_uri = mysql://username:password@db/opensips
+storage_db_uri = mysql://opensips:password@db/opensips
 
 ; Authentication and storage tables
 subscriber_table = subscriber
