openser.cfg: added fix_contact()
darcs-hash:20080826192505-b2873-c39d93b65c6ecdb31440aab3e77c0fefd4a6a988.gz

--- a/openser/openser.cfg
+++ b/openser/openser.cfg
@@ -46,6 +46,7 @@ loadmodule "presence.so"
 loadmodule "dialog.so"
 loadmodule "pua.so"
 loadmodule "pua_mi.so"
+loadmodule "nat_traversal.so"
 
 loadmodule "presence_xcapdiff.so"
 
@@ -108,6 +109,10 @@ route{
 	}
 
     if (method=='SUBSCRIBE') {
+        if (client_nat_test("3")) {
+    	    fix_contact();
+	}	
+        
         handle_subscribe();
         exit;
     }
