--- a/debian/control
+++ b/debian/control
@@ -3,14 +3,12 @@ Section: net
 Priority: optional
 Maintainer: Denis Bilenko <denis@ag-projects.com>
 Uploaders: Dan Pascu <dan@ag-projects.com>, Ruud Klaver <ruud@ag-projects.com>, Denis Bilenko <denis@ag-projects.com>
-Build-Depends: cdbs (>= 0.4.47), debhelper (>= 5.0.42), python-all-dev (>= 2.5.2), python-central (>= 0.5.6)
-XS-Python-Version: >= 2.5
+Build-Depends: cdbs (>= 0.4.47), debhelper (>= 5.0.42), python-all-dev (>= 2.5.2), python-support
 Standards-Version: 3.8.0
 
 Package: openxcap
 Architecture: all
 Depends: ${python:Depends}, python-lxml, python-zopeinterface, python-twisted-core, python-twisted-web, python-twisted-web2, python-application (>= 1.0.9), python-gnutls (>= 1.1.4), python-sqlobject, python-xml, python-mysqldb
-XB-Python-Version: ${python:Versions}
 Description: An Open Source XCAP server implementation
  XCAP protocol allows a client to read, write and modify application
  configuration data stored in XML format on a server. XCAP maps XML document
