Increased version to 1.0.8
darcs-hash:20090130100255-58252-054c8729fdb6243c6da3cb83dfec7ec1a4c69dc6.gz

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: openxcap
 Section: net
 Priority: optional
 Maintainer: Denis Bilenko <denis@ag-projects.com>
-Uploaders: Dan Pascu <dan@ag-projects.com>, Ruud Klaver <ruud@ag-projects.com>, Lucian Stanescu <luci@ag-projects.com>
+Uploaders: Dan Pascu <dan@ag-projects.com>, Ruud Klaver <ruud@ag-projects.com>, Lucian Stanescu <luci@ag-projects.com>, Adrian Georgescu <ag@ag-projects.com>
 Build-Depends: cdbs (>= 0.4.47), debhelper (>= 5.0.42), python-all-dev (>= 2.5.2), python-support
 Standards-Version: 3.8.0
 
