log all the information available for 500 errors by default
darcs-hash:20090407083420-b2873-51dde7704f82d6e28024628ab6d8c949a01e9bbc.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -51,10 +51,10 @@ document_validation = Yes
 ; * log stack trace (if available) for any error
 ;log_stacktrace=any
 
-; * log responses sent to the client for 400 and 409 errors (default is none)
+; * log responses sent to the client for 400 and 409 errors (default is 500)
 ;log_response_body=400,409
 
-; * log headers sent by the client for 401 errors (default is none)
+; * log headers sent by the client for 401 errors (default is 500)
 ;log_request_headers=401
 
 
