text/config1.ini: log to stdout by default
darcs-hash:20090416084428-b2873-cfcc65a1342e3b46b10544067901d3c2e0979dc4.gz

--- a/xcap/test/config1.ini
+++ b/xcap/test/config1.ini
@@ -4,7 +4,8 @@ port = 8794
 root = http://127.0.0.1
 #backend = database
 [Logging]
-directory=/tmp/openxcap-test-log
+#directory=/tmp/openxcap-test-log
+directory=
 #log_request_headers=yes
 #log_request_body=yes
 #log_response_headers=yes
