Simplified and updated debian build dependencies
darcs-hash:20090724090731-b22ec-2042641bca949f96e1d90f16b21b2c446866de94.gz

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: net
 Priority: optional
 Maintainer: Lucian Stanescu <luci@ag-projects.com>
 Uploaders: Dan Pascu <dan@ag-projects.com>, Ruud Klaver <ruud@ag-projects.com>, Adrian Georgescu <ag@ag-projects.com>
-Build-Depends: cdbs (>= 0.4.47), debhelper (>= 5.0.42), python-all-dev (>= 2.5.2), python-support
+Build-Depends: cdbs (>= 0.4.47), debhelper (>= 5.0.42), python
+Build-Depends-Indep: python-support
 Standards-Version: 3.8.2
 
 Package: openxcap
