--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,12 @@
-recursive-include debian  changelog compat control copyright pycompat rules
-recursive-include debian  openxcap.dirs openxcap.init openxcap.postrm
-recursive-include scripts mysql-create.sql
-recursive-include tls     .placeholder
-recursive-include xcap/xml-schemas *.xsd
+recursive-include debian   changelog compat control copyright install
+recursive-include debian   pycompat pyversions rules
+recursive-include debian   *.dirs *.init *.postinst *.postrm
+recursive-include opensips *.cfg
+recursive-include scripts  *.py *.sql
+recursive-include tls      .placeholder
+recursive-include xcap/test/schemas *.xsd
+recursive-include xcap/xml-schemas  *.xsd
 prune debian/tmp
-prune debian/openxcap-*
+prune debian/openxcap
+prune debian/python-module-stampdir
 include INSTALL LICENSE MANIFEST.in TODO config.ini.sample
