Fixed logging with latest python-application
Ignore-this: 51f1b2f3ceb61cddf7babb5ce14ba5d6

darcs-hash:20100420164855-56b4d-68dd4d7f586d4e03b7d2b48313d7e3e780b3d11e.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -33,6 +33,7 @@ document_validation = Yes
 [Logging]
 ; directory where to put log files, default is /var/log/openxcap
 ; if empty, like in the following line, logs will be printed to stdout
+; if in no-fork mode or to syslog if in forked mode
 ;directory=
 
 ; The following log_* parameters control what information is logged for
