Updated debian maintainer and uploaders
Ignore-this: dffdd31fa2645349f735ac5fce3f073b

darcs-hash:20100422103357-56b4d-d0f9753661dd9d8c1b6e55a5528742b9f2b6965c.gz

--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: openxcap
 Section: net
 Priority: optional
-Maintainer: Lucian Stanescu <luci@ag-projects.com>
-Uploaders: Dan Pascu <dan@ag-projects.com>, Ruud Klaver <ruud@ag-projects.com>, Adrian Georgescu <ag@ag-projects.com>
+Maintainer: Saul Ibarra <saul@ag-projects.com>
+Uploaders: Dan Pascu <dan@ag-projects.com>, Adrian Georgescu <ag@ag-projects.com>, Lucian Stanescu <luci@ag-projects.com>
 Build-Depends: cdbs (>= 0.4.53), debhelper (>= 7.0.0), python
 Build-Depends-Indep: python-support
 Standards-Version: 3.8.4
