Restructured all appusages
Ignore-this: 139916664b87e13e3dadee584a6a6365

darcs-hash:20100422104418-56b4d-2688b691f3427ad27eddbaddba6d95648dc101e0.gz

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ recursive-include opensips *.cfg
 recursive-include scripts  *.py *.sql
 recursive-include tls      .placeholder
 recursive-include xcap/test/schemas *.xsd
-recursive-include xcap/xml-schemas  *.xsd
+recursive-include xcap/appusage/xml-schemas  *.xsd
 prune debian/tmp
 prune debian/openxcap
 prune debian/python-module-stampdir
