Remove default TLS certificate and key name
Ignore-this: 7556fe3de20d2f872e4c62a6966ae859

darcs-hash:20100423145152-56b4d-5987425255d8ccc1318d57ff290cfbcf1972bf80.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -83,10 +83,10 @@ trusted_peers =
 ; path.
 
 ; Server X509 certificate
-;certificate = tls/server.crt
+;certificate =
 
 ; Server X509 private key
-;private_key = tls/server.key
+;private_key =
 
 
 [Database]
